Menu and navigation done

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -27,6 +27,12 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/}"> Shipping Cost </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/AddBoxForm}"> Add Box Form </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/ShowBoxList}"> Show Box list </a>
+            </li>
         </ul>
     </nav>
 </header>
