--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,11 @@
 
 <!-- main container -->
 <div class="container customerContainer bg-dark">
-    <h2>Welcome to the Shipping cost application</h2>
+    <div class="card">
+        <div class="card-header card bg-dark text-white">
+            <h2> Welcome to the Shipping cost application </h2>
+        </div>
+    </div>
 </div>
 
 
