--- a/src/main/resources/templates/AddBoxForm.html
+++ b/src/main/resources/templates/AddBoxForm.html
@@ -9,7 +9,11 @@
 
 <!-- main container -->
 <div class="container customerContainer bg-dark">
-
+    <div class="card">
+        <div class="card-header card bg-dark text-white">
+            <h2> Add Box form </h2>
+        </div>
+    </div>
 </div>
 
 
