--- a/src/main/resources/templates/ShowBoxList.html
+++ b/src/main/resources/templates/ShowBoxList.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments/headerResources :: header_resources"></head>
+
+
 <body>
+<!-- header -->
+<nav th:insert="fragments/navbar :: nav_fragment"></nav>
+
+<!-- main container -->
+<div class="container customerContainer bg-dark">
+    <div class="card">
+        <div class="card-header card bg-dark text-white">
+            <h2> Show Box List </h2>
+        </div>
+    </div>
+</div>
+
+
+<!-- footer -->
+<footer th:insert="fragments/footer :: footer_fragment"></footer>
 
 </body>
 </html>
