--- a/src/main/resources/templates/AddBoxForm.html
+++ b/src/main/resources/templates/AddBoxForm.html
@@ -14,6 +14,31 @@
             <h2> Add Box form </h2>
         </div>
     </div>
+
+
+
+    <div class="card-body">
+        <form th:action="@{/AddBoxForm}" method="post" th:object="${box}">
+
+            <div class="col-sm-12">
+                <div class="row">
+                    <div class="col-sm-6 form-group">
+                        <label for="name"> Name: </label>
+                        <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Enter name" name="name">
+                        <p class="alert alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn btn-primary btn-block mb-3" data-toggle="modal"
+                        data-target="#myModal">
+                    Add details
+                </button>
+
+            </div>
+        </form>
+    </div>
+
+
 </div>
 
 
