--- a/src/main/resources/templates/AddBoxForm.html
+++ b/src/main/resources/templates/AddBoxForm.html
@@ -16,32 +16,69 @@
     </div>
 
 
-
-    <div class="card-body">
+    <div class="card-body text-white">
 
         <form th:action="@{/AddBoxForm}" method="post" th:object="${box}">
 
             <div class="col-sm-12">
                 <div class="row">
-                    <div class="col-sm-6 form-group">
-                        <label> Name: </label>
-                        <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Enter name" name="name">
-                    </div>
-                    <!--
-                    <div class="col-sm-6 form-group">
+                    <div class="col-sm-12 form-group">
                         <label for="name"> Name: </label>
-                        <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Enter name" name="name">
+                        <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Name"
+                               name="name">
                         <p class="alert alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
                     </div>
-                    -->
+
+
+                    <div class="form-check col-sm-3">
+                        <label class="form-check-label">
+                            <input type="radio" class="form-check-input" name="optradio"> Letter
+                        </label>
+                        <!--
+                        <label class="form-check-label ">
+                            <input type="radio" class="form-check-input" name="optradio"> Packet
+                        </label>
+                        -->
+                    </div>
+
+                    <div class="form-check col-sm-3">
+                        <label class="form-check-label">
+                            <input type="radio" class="form-check-input" name="optradio"> Packet
+                        </label>
+                    </div>
+
+
+                    <div class="col-sm-6 form-group">
+                        <label for="weight"> Weight: </label>
+                        <input type="text" th:field="*{weight}" id="weight" class="form-control" placeholder="Weight"
+                               name="weight">
+                        <p class="alert alert-danger" th:if="${#fields.hasErrors('weight')}" th:errors="*{weight}"></p>
+                    </div>
+
+                    <div class="col-sm-6 form-group">
+                        <label for="weightType"> Weight Type: </label>
+                        <select class="form-control" id="weightType" name="weightType">
+                            <option value="kg"> KG</option>
+                            <option value="g"> G</option>
+                        </select>
+                    </div>
+
+
+                    <div class="col-sm-6 form-group">
+                        <label for="country"> Country: </label>
+                        <input type="text" th:field="*{country}" class="form-control" id="country" placeholder="Country"
+                               name="country">
+                        <p class="alert alert-danger" th:if="${#fields.hasErrors('country')}"
+                           th:errors="*{country}"></p>
+                    </div>
                 </div>
-
-                <button type="submit" class="btn btn-primary btn-block mb-3" data-toggle="modal"
-                        data-target="#myModal">
-                    Add details
-                </button>
-
             </div>
+
+            <button type="submit" class="btn btn-primary btn-block mb-3">
+                Register
+            </button>
+
+
         </form>
 
     </div>
