--- a/src/main/resources/templates/ShowBoxList.html
+++ b/src/main/resources/templates/ShowBoxList.html
@@ -11,9 +11,23 @@
 <div class="container customerContainer bg-dark">
     <div class="card">
         <div class="card-header card bg-dark text-white">
-            <h2> Show Box List </h2>
+            <h2> List of the shipping box </h2>
+        </div>
+        <p>
+            <a th:href="@{/AddBoxForm}" class="btn btn-success"> Add Shipping information </a>
+        </p>
+    </div>
+
+    <div class="card-body errMsg">
+        <div class="alert alert-success" th:if="${message}" th:text="${message}" th:class="${'alert ' + alertClass}"></div>
+    </div>
+
+    <div class="card-body errMsg">
+        <div class="alert alert-warning" th:if="${box.isEmpty()}">
+            <strong> No information is available </strong>
         </div>
     </div>
+
 </div>
 
 
