--- a/src/main/resources/templates/AddBoxForm.html
+++ b/src/main/resources/templates/AddBoxForm.html
@@ -11,7 +11,7 @@
 <div class="container customerContainer bg-dark">
     <div class="card">
         <div class="card-header card bg-dark text-white">
-            <h2> Add Box form </h2>
+            <h2> Shipping form </h2>
         </div>
     </div>
 
@@ -33,19 +33,14 @@
                         <div class="form-check col-sm-3">
                             <label class="form-check-label">
                                 <input type="radio" class="form-check-input" name="optradio" th:field="*{type}"
-                                       value="letter"> Letter
+                                       value="Letter"> Letter
                             </label>
-                            <!--
-                            <label class="form-check-label ">
-                                <input type="radio" class="form-check-input" name="optradio"> Packet
-                            </label>
-                            -->
                         </div>
 
                         <div class="form-check col-sm-3">
                             <label class="form-check-label">
                                 <input type="radio" class="form-check-input" th:field="*{type}" name="optradio"
-                                       value="packet"> Packet
+                                       value="Packet"> Packet
                             </label>
                         </div>
                         <p class="alert alert-danger" th:if="${#fields.hasErrors('type')}" th:errors="*{type}"></p>
@@ -71,8 +66,6 @@
 
                     <div class="col-sm-6 form-group">
                         <label for="country"> Country: </label>
-                        <!--<input type="text" th:field="*{country}" class="form-control" id="country" placeholder="Country"
-                               name="country">-->
                         <select class="form-control" id="country" th:field="*{country}" name="country">
                             <option value="SWE"> Sweden</option>
                             <option value="AU"> Australia</option>
@@ -86,13 +79,9 @@
             <button type="submit" class="btn btn-primary btn-block mb-3">
                 Register
             </button>
-
-
         </form>
 
     </div>
-
-
 </div>
 
 
