--- a/src/main/resources/templates/ShowBoxList.html
+++ b/src/main/resources/templates/ShowBoxList.html
@@ -11,7 +11,7 @@
 <div class="container customerContainer bg-dark">
     <div class="card">
         <div class="card-header card bg-dark text-white">
-            <h2> List of the shipping box </h2>
+            <h2> List of the shipping information </h2>
         </div>
         <p>
             <a th:href="@{/AddBoxForm}" class="btn btn-success"> Add Shipping information </a>
@@ -56,10 +56,11 @@
                     <span th:text="${boxDto.getCountry()}"></span>
                 </td>
                 <td>
-                    <span th:text="${boxDto.getWeight()}"></span>
+                    <span th:text="${boxDto.getWeight()}"></span> -
+                    <span th:text="${boxDto.getWeightType().toUpperCase()}"></span>
                 </td>
                 <td>
-                    <span th:text="${boxDto.getCost()}"></span>
+                    <span th:text="${boxDto.getCost()}"></span> USD
                 </td>
             </tr>
             </tbody>
